Added thesis paper files to project.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,29 @@ compiled
 
 # output plots
 output
+
+#TeX stuff
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.lol
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.swp
